Address PR comments - Format names renamed to "Platform" and "Device" - "Upload and Apply" button now supports both formats - Double format REST API implementation
Signed-off-by: Claudio Mezzasalma <claudio.mezzasalma@eurotech.com>