@@ -32,13 +32,14 @@ import org.slf4j.LoggerFactory;
 public class DeviceSnapshotsServlet extends HttpServlet {
 
     private static final long serialVersionUID = -2533869595709953567L;
+    private static final String UTF_8 = "UTF-8";
 
     private static final Logger logger = LoggerFactory.getLogger(DeviceSnapshotsServlet.class);
 
     @Override
     public void doGet(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
-        response.setCharacterEncoding("UTF-8");
+        response.setCharacterEncoding(UTF_8);
         PrintWriter writer = response.getWriter();
         try {
             boolean isNative = Boolean.parseBoolean(request.getParameter("native"));
@@ -59,16 +60,16 @@ public class DeviceSnapshotsServlet extends HttpServlet {
 
             String contentDispositionFormat;
             if (isNative) {
-                contentDispositionFormat = "attachment; filename*=UTF-8''snapshot_native_%s_%s_%s.xml; ";
+                contentDispositionFormat = "attachment; filename*=UTF-8''snapshot_device_%s_%s_%s.xml; ";
             } else {
-                contentDispositionFormat = "attachment; filename*=UTF-8''snapshot_%s_%s_%s.xml; ";
+                contentDispositionFormat = "attachment; filename*=UTF-8''snapshot_platform_%s_%s_%s.xml; ";
             }
 
             response.setContentType("application/xml; charset=UTF-8");
             response.setHeader("Cache-Control", "no-transform, max-age=0");
             response.setHeader("Content-Disposition", String.format(contentDispositionFormat,
-                    URLEncoder.encode(account, "UTF-8"),
-                    URLEncoder.encode(clientId, "UTF-8"),
+                    URLEncoder.encode(account, UTF_8),
+                    URLEncoder.encode(clientId, UTF_8),
                     snapshotId));
 
             if (isNative) {
